--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.1.0",
     "helmet": "^7.2.0",
     "joi": "^17.13.3",
-    "morgan": "^1.10.1"
+    "mongoose": "^8.18.1",
+    "morgan": "^1.10.1",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "@types/node": "^24.5.2",
     "nodemon": "^3.0.1"
   }
 }
